--- a/Android Application/app/src/main/res/layout/activity_image_analysis.xml
+++ b/Android Application/app/src/main/res/layout/activity_image_analysis.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="#3A3535"
     tools:context=".ImageAnalysis">
 
     <ImageView
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="11dp"
-        android:text="Select Image"
+        android:text="@string/SelectImage"
         app:layout_constraintBottom_toTopOf="@+id/Prediction"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -39,7 +39,7 @@
         android:layout_marginTop="14dp"
         android:layout_marginBottom="14dp"
         android:background="@color/teal_200"
-        android:text="Predicton"
+        android:text="@string/Prediction"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -68,7 +68,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="16dp"
         android:background="@color/teal_200"
-        android:text="Generate report"
+        android:text="@string/report"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
